# FCCDetectors

Detector/: CMakeLists.txt
Detector/DetFCCeeCLD/compact/FCCee_o2_v02/: FCCee_o2_v02.xml
Detector/DetFCCeeHCalTile/compact/: FCCee_HCalBarrel_TileCal.xml
Detector/DetFCCeeIDEA-LAr/compact/: FCCee_DectMaster.xml
Detector/DetFCCeeLArPandora/: CMakeLists.txt
Detector/DetPlugins/: CMakeLists.txt
Detector/DetPlugins/src/: DetectorTypeAndRecoExtensionPlugin.cpp
